# pyexcel

./: .gitignore  .isort.cfg  .moban.yml  .readthedocs.yml  .travis.yml  AGENT.md  CHANGELOG.rst  CONTRIBUTORS.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  VERSION  applymoban.py  changelog.yml  document.bat  document.sh  format.sh  lint.sh  min_requirements.txt  moban.yaml  py3_requirements.txt  pyexcel.yml  pyexcel_merged.csv  pyproject.toml  requirements.txt  rnd_requirements.txt  setup.cfg  setup.py  test.bat  test.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/workflows/: lint.yml  moban-update.yml  pythonpublish.yml  tests-linux.yml  tests-macos.yml  tests-windows.yml  tests.yml
.moban.d/: .gitignore  CONTRIBUTORS.rst.jj2  CUSTOM_MANIFEST.in.jj2  README.rst  custom_setup.py.jj2  custom_test.sh.jj2  minimum_requirements.txt.jj2  one-liners.rst.jj2  partial-data.rst.jj2  pyexcel-README.rst.jj2  pyexcel-travis.yml.jj2  requirements.txt  setup.py  supported-file-list.rst.jj2  test.bat  test.bat.jj2  test.sh  travis.yml  two-liners.rst.jj2  version.txt
.moban.d/tests/: custom_requirements.txt.jj2  requirements.txt
doc/: make.bat  requirements.txt
doc/source/: answers.rst  api.rst  architecture.dia  attributes.rst  bigdata.rst  capability.rst  conf.py  cookbook.rst  csvz.rst  design.rst  iapi.rst  (+20 more)
docs/: Makefile  requirements.txt
examples/: .~lock.example.csv#  README.rst  example.xls  example.xlsm  example_series.ods  flatten.py  flatteni.py  formatter01.py  formatter02.py  jsonify.py  series.py  tutorial_datatype_01.xls
pyexcel/: __init__.py  __version__.py  _compact.py  _compat.py  book.py  common.py  constants.py  cookbook.py  core.py  datastruct.py  deprecated.py  docs.py  excel.py  exceptions.py  exthook.py  factory.py  filters.py  formatters.py  generators.py  iterators.py  params.py  parser.py  parsers.py  presentation.py  processings.py  readers.py  renderer.py  renderers.py  sheet.py  sheets.py  source.py  sources.py  texttable.py  utils.py  writers.py
tests/: _compact.py  base.py  db.py  multiple.ods  nose_tools.py  requirements.txt  test_book.py  test_book_stream.py  test_bug_fixes.py  test_cookbook.py  test_csv.py  test_deprecation_notes.py  test_django_related_functions.py  test_examples.py  test_exploitation.py  test_extension.py  test_file_type_as_attribute.py  test_fileio.py  test_filter.py  test_formatters.py  test_gabagecollector.py  test_http_source.py  test_internals.py  test_io_csvbook.py  test_io_csvzipbook.py  test_iterator.py  test_json_source.py  test_meta_coding.py  test_multiple_sheets.py  test_ods.py  test_ods_reader.py  test_parser.py  test_pathlib_path.py  test_presentation.py  test_processings.py  test_pyexcel_list.py  test_reader.py  test_renderer.py  test_sheet.py  test_sheet_access.py  (+20 more)
(+275 files in other folders)
