[metadata]
name = pyexcel
author = C.W.
author_email = info@pyexcel.org
license = New BSD
description = A wrapper library that provides one API to read, manipulate and writedata in different excel formats
keywords = python, tsv, tsvzcsv, csvz, xls, xlsx, ods
url = https://github.com/pyexcel/pyexcel
download_url = https://github.com/pyexcel/pyexcel/archive/0.7.0.tar.gz
long_description = file: README.rst
classifiers =
    Topic :: Software Development :: Libraries
    Programming Language :: Python
    Intended Audience :: Developers
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Development Status :: 3 - Alpha

[options]
packages = find:
zip_safe = False
install_requires =
    chardet
    lml>=0.0.4
    pyexcel-io>=0.6.2
    texttable>=0.8.2
include_package_data = True
python_requires = >=3.6
test_suite = tests
tests_require = nose

[options.packages.find]
exclude = ez_setup; examples; tests; tests.*

[options.extras_require]
xls = pyexcel-xls>=0.6.0
xlsx = pyexcel-xlsx>=0.6.0
ods = pyexcel-ods3>=0.6.0

[bdist_wheel]
universal = 1
